syntax = "proto3";

package order.service.v1;


option go_package = "api/order/service/v1;v1";

service Order {
    // 获取订单信息
    rpc OrderInfo(GetOrderInfoReq) returns (GetOrderInfoReply);

    // 创建订单
    rpc AddOrder(AddOrderReq) returns(AddOrderReply);
}

//获取订单信息
message GetOrderInfoReq {
    uint64 order_id = 1;
}
message GetOrderInfoReply {
    message Items {
        string desc = 1;
        float price = 2;
    }
    float total_amount = 1;
    repeated Items items = 2;
}

// 创建订单
message AddOrderReq {
    message Items {
        string product_code = 1;
        repeated string ingredient_codes = 2;
    }
    repeated Items items = 1;

}
message AddOrderReply {
    bool result = 1;
}


